--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^17.0.22",
     "@types/react-dom": "^17.0.9",
     "fabric": "^4.6.0",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
@@ -51,6 +52,7 @@
     "@types/fabric": "^4.5.3",
     "@types/styled-components": "^5.1.14",
     "customize-cra": "^1.0.0",
-    "react-app-rewired": "^2.1.8"
+    "react-app-rewired": "^2.1.8",
+    "use-resize-observer": "^8.0.0"
   }
 }
